# bevy-sandbox-engine

./: Cargo.toml  README.md  justfile
.github/workflows/: book.yaml  ci.yaml  release.yaml
bevy_2d_viewport/src/: lib.rs
bevy_3d_viewport/src/: lib.rs  selection_box.rs  view_gizmo.rs
bevy_asset_browser/src/: lib.rs  ui.rs
bevy_asset_browser/src/io/: task.rs
bevy_asset_browser/src/ui/: directory_content.rs  nodes.rs  top_bar.rs
bevy_context_menu/src/: ui.rs
bevy_editor/: Cargo.toml  build.rs
bevy_editor/src/: compat.rs  lib.rs  load_gltf.rs  locale_env.rs  main.rs  project.rs  ui.rs  window_icon.rs
bevy_editor/src/compat/: render.rs  script.rs
bevy_editor/src/project/: cache.rs  templates.rs
bevy_editor/src/ui/: menus.rs
bevy_editor_cam/src/: input.rs
bevy_editor_cam/src/extensions/: independent_skybox.rs
bevy_editor_core/src/: utils.rs
bevy_editor_launcher/: Cargo.toml  build.rs
bevy_editor_launcher/src/: main.rs  ui.rs
bevy_editor_launcher/src/ui/: mod.rs  projects.rs  templates.rs
bevy_editor_panes/bevy_2d_viewport/src/: lib.rs
bevy_editor_panes/bevy_asset_browser/src/: lib.rs
bevy_editor_panes/bevy_asset_browser/src/ui/: nodes.rs
bevy_editor_styles/: Cargo.toml
bevy_editor_styles/src/: icons.rs  lib.rs
bevy_field_forms/examples/: nickname.rs
bevy_footer_bar/src/: lib.rs
bevy_gizmo_indicator/: Cargo.toml
bevy_gizmo_indicator/src/: lib.rs
bevy_i-cant-believe-its-not-bsn/src/: hierarchy.rs  maybe.rs  template.rs
bevy_infinite_grid/src/: render.rs
bevy_menu_bar/src/: lib.rs
bevy_pane_layout/: Cargo.toml
bevy_pane_layout/src/: containers.rs  lib.rs  ui.rs
bevy_pane_layout/src/containers/: mod.rs  pane.rs  subpane.rs
bevy_properties_pane/src/: lib.rs
bevy_proto_bsn/: Cargo.toml
bevy_proto_bsn/src/: bsn_asset.rs  bsn_reflect.rs  construct.rs  construct_impls.rs  construct_reflect.rs  dynamic.rs  entity_patch.rs
bevy_proto_bsn_macros/: Cargo.toml
bevy_proto_bsn_macros/src/: lib.rs
bevy_scene_tree/: Cargo.toml
bevy_scene_tree/src/: lib.rs
bevy_toolbar/: Cargo.toml
bevy_toolbar/src/: lib.rs
bevy_transform_gizmos/src/: lib.rs  normalization.rs
bevy_widgets/bevy_context_menu/src/: ui.rs
bevy_widgets/bevy_menu_bar/src/: lib.rs
bevy_widgets/bevy_scroll_box/src/: lib.rs
bevy_widgets/bevy_toolbar/: Cargo.toml
crates/bevy_clipboard/: Cargo.toml
crates/bevy_editor/: Cargo.toml
crates/bevy_editor/src/: lib.rs  project.rs  ui.rs
crates/bevy_editor/src/project/: cache.rs  templates.rs
crates/bevy_editor_core/: Cargo.toml
crates/bevy_editor_core/src/: lib.rs
crates/bevy_editor_launcher/: Cargo.toml
crates/bevy_editor_launcher/examples/: simple_editor.rs
crates/bevy_editor_launcher/src/: main.rs  ui.rs
crates/bevy_editor_settings/: Cargo.toml
crates/bevy_editor_settings/src/: file_system.rs
crates/bevy_infinite_grid/src/: render.rs
crates/bevy_pane_layout/: Cargo.toml
crates/bevy_pane_layout/src/: components.rs  ui.rs
crates/bevy_pane_layout/src/containers/: flex_spacer.rs  pane.rs
crates/bevy_proto_bsn/examples/: bsn_macro.rs
crates/bevy_proto_bsn/src/: bsn_reflect.rs  construct.rs  construct_reflect.rs
crates/bevy_proto_bsn/src/macros/src/: derive_construct.rs
design-book/: book.toml
project_templates/base/: template.toml  tsconfig.json
project_templates/base/Assets/GUI/: JoyStick.ui
project_templates/base/Assets/Prefabs/: BaseSceneObject.prefab  InputManager.prefab
project_templates/base/Assets/Resources/Materials/: Obstacle1.mat  Obstacle2.mat  Plane.mat  Wall.mat
project_templates/base/Assets/Resources/Shader/: DecorationSkin.shader
project_templates/base/Assets/Scenes/: Temp Scene.scene
project_templates/base/Assets/Scripts/Controller/: CameraController.ts  PlayerController.ts
project_templates/base/Assets/Scripts/Decoration/: DecorationBase.ts  DecorationSkinLoader.ts  DecorationStaticMeshLoader.ts  DecorationType.ts
project_templates/base/Assets/Scripts/InputController/: JoyStick.ts  KeyBoard.ts
project_templates/base/Assets/Scripts/Units/: MathfExpand.ts
project_templates/base/Cache/Engine/: Engine.d.ts
project_templates/base/DisasterRecovery/: RestorerConfig.ini
project_templates/base/ProjectSettings/: EditorSettings.json  ProjectInfoConfig.ini  ProjectSettings.json  UIModeSettings.json
project_templates/base/ProjectSettings/DockLayout/: Animator.xml  Default.xml  UI.xml
project_templates/base/Temp/TS Configs/: tsconfig.json
project_templates/base/Temp/TS Declarations/Controller/: CameraController.d.ts  CameraController.d.ts.map  PlayerController.d.ts  PlayerController.d.ts.map
project_templates/base/Temp/TS Declarations/Decoration/: DecorationBase.d.ts  DecorationBase.d.ts.map  DecorationSkinLoader.d.ts  DecorationSkinLoader.d.ts.map  DecorationStaticMeshLoader.d.ts  DecorationStaticMeshLoader.d.ts.map  DecorationType.d.ts  DecorationType.d.ts.map
project_templates/base/Temp/TS Declarations/InputController/: JoyStick.d.ts  JoyStick.d.ts.map  KeyBoard.d.ts  KeyBoard.d.ts.map
project_templates/base/Temp/TS Declarations/Units/: MathfExpand.d.ts  MathfExpand.d.ts.map
project_templates/shooting_game/: .gitignore  Project1.code-workspace  template.toml  tsconfig.json  tsconfig.strict.json
project_templates/shooting_game/Assets/Scripts/EnumData/: EventName.ts
project_templates/shooting_game/Assets/Scripts/Managers/: LevelManager.ts
project_templates/shooting_game/Assets/Scripts/Units/: ObjPool.ts  (+1 more)
project_templates/shooting_game/DisasterRecovery/: RestorerConfig.ini
project_templates/shooting_game/ModDeclare/: global.d.ts
project_templates/shooting_game/ProjectSettings/: BuildSettings.json  CSModeSetting.json  ProjectInfoConfig.ini  ProjectSettings.json
project_templates/shooting_game/ProjectSettings/DockLayout/: Animator.xml  Default.xml  UI.xml
project_templates/shooting_game/ProjectSettings/EnumGroupData/: EnumObjectLayer.json
templates/blank_project/: Cargo.toml  template.toml
templates/blank_project/src/: main.rs
templates/getting_started/: Cargo.toml  template.toml
templates/getting_started/src/: main.rs
(+40 files in other folders)
