[workspace]
resolver = "3"
members = ["bevy_*"]
exclude = ["templates"]
default-members = ["bevy_editor_launcher"]

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
bevy = { version = "0.18.1", features = ["experimental_bevy_feathers", "experimental_bevy_ui_widgets"] }
bevy_egui = "0.39.1"
bevy_derive = "0.18.1"
bevy_macro_utils = "0.18.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing-test = "0.2.6"
tracing = "0.1.44"
atomicow = "1.2.0"
rfd = "0.17.2"
ron = "0.12.1"
variadics_please = "2.0.0"

# local crates

# workspace crates
bevy_2d_viewport = { path = "bevy_2d_viewport" }
bevy_3d_viewport = { path = "bevy_3d_viewport" }
bevy_asset_browser = { path = "bevy_asset_browser" }
bevy_asset_preview = { path = "bevy_asset_preview" }
bevy_clipboard = { path = "bevy_clipboard" }
bevy_color_picker = { path = "bevy_color_picker" }
bevy_command_palette = { path = "bevy_command_palette" }
bevy_context_menu = { path = "bevy_context_menu" }
bevy_editor_cam = { path = "bevy_editor_cam" }
bevy_editor_camera = { path = "bevy_editor_camera" }
bevy_editor_core = { path = "bevy_editor_core" }
bevy_sandbox_engine = { package = "bevy-sandbox-engine", path = "bevy_editor" }
bevy_editor_launcher = { path = "bevy_editor_launcher" }
bevy_editor_settings = { path = "bevy_editor_settings" }
bevy_editor_styles = { path = "bevy_editor_styles" }
bevy_field_forms = { path = "bevy_field_forms" }
bevy_footer_bar = { path = "bevy_footer_bar" }
bevy_gizmo_indicator = { path = "bevy_gizmo_indicator" }
bevy_i-cant-believe-its-not-bsn = { path = "bevy_i-cant-believe-its-not-bsn" }
bevy_infinite_grid = { path = "bevy_infinite_grid" }
bevy_localization = { path = "bevy_localization" }
bevy_marketplace_viewer = { path = "bevy_marketplace_viewer" }
bevy_menu_bar = { path = "bevy_menu_bar" }
bevy_pane_layout = { path = "bevy_pane_layout" }
bevy_preferences = { path = "bevy_preferences" }
bevy_properties_pane = { path = "bevy_properties_pane" }
bevy_proto_bsn = { path = "bevy_proto_bsn" }
bevy_proto_bsn_ast = { path = "bevy_proto_bsn_ast" }
bevy_proto_bsn_macros = { path = "bevy_proto_bsn_macros" }
bevy_scene_tree = { path = "bevy_scene_tree" }
bevy_scroll_box = { path = "bevy_scroll_box" }
bevy_text_editing = { path = "bevy_text_editing" }
bevy_toolbar = { path = "bevy_toolbar" }
bevy_tooltips = { path = "bevy_tooltips" }
bevy_transform_gizmos = { path = "bevy_transform_gizmos" }
bevy_undo = { path = "bevy_undo" }


[profile.dev]
debug = 0

#最快编译时间
[profile.release]
lto = false
codegen-units = 256
panic = "abort"
debug = 0
