[package]
name = "bevy-sandbox-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true

# Editor
bevy_editor_core.workspace = true
bevy_pane_layout.workspace = true
bevy_toolbar.workspace = true
bevy_gizmo_indicator.workspace = true
bevy_context_menu.workspace = true
bevy_editor_styles.workspace = true
bevy_transform_gizmos.workspace = true

# Panes
bevy_3d_viewport.workspace = true
bevy_2d_viewport.workspace = true
bevy_scene_tree.workspace = true
bevy_properties_pane.workspace = true
bevy_asset_browser.workspace = true

# Third party
serde.workspace = true
ron.workspace = true
toml.workspace = true
rfd.workspace = true

[lints]
workspace = true
