[package]
name = "bevy-sandbox-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true

# Editor
bevy_editor_core.workspace = true
bevy_pane_layout.workspace = true
bevy_toolbar.workspace = true
bevy_gizmo_indicator.workspace = true
bevy_context_menu.workspace = true
bevy_editor_styles.workspace = true
bevy_transform_gizmos.workspace = true

# Panes
bevy_3d_viewport.workspace = true
bevy_2d_viewport.workspace = true
bevy_scene_tree.workspace = true
bevy_properties_pane.workspace = true
bevy_asset_browser.workspace = true

# Third party
serde.workspace = true
serde_json = "1.0"
ron.workspace = true
toml.workspace = true
rfd.workspace = true
regex = "1.12.4"
rquickjs = "0.12.0"
walkdir = "2.5.0"
sys-locale = "0.3.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
winit = "0.30.13"

[lints]
workspace = true
