[package]
name = "bevy-sandbox-engine-launcher"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_sandbox_engine.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30.13"

rfd.workspace = true
