[package]
name = "bevy-sandbox-engine-launcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_sandbox_engine.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sys-locale = "0.3"
winit = "0.30.13"

rfd.workspace = true

[build-dependencies]
winres = "0.1"
