[package]
name = "bevy-sandbox-engine-launcher"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_sandbox_engine.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
winit = "0.30.13"

rfd.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = "0.10.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }
